# youtube-trascribe-replit

./: chat_request.py  main.py  package-lock.json  package.json  pyproject.toml  replit.nix
static/css/: style.css
static/js/: script.js
templates/: index.html
utils/: qa_utils.py  transcription_utils.py  youtube_utils.py
